--- a/main.bib
+++ b/main.bib
@@ -108,3 +108,209 @@
   year={2014},
   organization={Springer}
 }
+
+@article{pedrozo2017swiss,
+  title={Swiss military drones and the border space: a critical study of the surveillance exercised by border guards},
+  author={Pedrozo, Silvana},
+  journal={Geographica Helvetica},
+  volume={72},
+  number={1},
+  pages={97--107},
+  year={2017},
+  publisher={Copernicus GmbH}
+}
+
+@inproceedings{abushahma2019comparative,
+  title={Comparative features of unmanned aerial vehicle (uav) for border protection of libya: a review},
+  author={Abushahma, Rema Ibrahim Hamad and Ali, Musab AM and Abd Rahman, Nur Adilah and Al-Sanjary, Omar Ismael},
+  booktitle={2019 IEEE 15th International Colloquium on Signal Processing \& Its Applications (CSPA)},
+  pages={114--119},
+  year={2019},
+  organization={IEEE}
+}
+
+@inproceedings{girard2004border,
+  title={Border patrol and surveillance missions using multiple unmanned air vehicles},
+  author={Girard, Anouck R and Howell, Adam S and Hedrick, J Karl},
+  booktitle={2004 43rd IEEE conference on decision and control (CDC)(IEEE Cat. No. 04CH37601)},
+  volume={1},
+  pages={620--625},
+  year={2004},
+  organization={IEEE}
+}
+
+@inproceedings{yuan2017fire,
+  title={Fire detection using infrared images for UAV-based forest fire surveillance},
+  author={Yuan, Chi and Liu, Zhixiang and Zhang, Youmin},
+  booktitle={2017 International Conference on Unmanned Aircraft Systems (ICUAS)},
+  pages={567--572},
+  year={2017},
+  organization={IEEE}
+}
+
+@inproceedings{merino2005cooperative,
+  title={Cooperative fire detection using unmanned aerial vehicles},
+  author={Merino, Luis and Caballero, Fernando and Martinez-de Dios, JR and Ollero, An{\'\i}bal},
+  booktitle={Proceedings of the 2005 IEEE international conference on robotics and automation},
+  pages={1884--1889},
+  year={2005},
+  organization={IEEE}
+}
+
+@article{chretien2015wildlife,
+  title={Wildlife multispecies remote sensing using visible and thermal infrared imagery acquired from an unmanned aerial vehicle (UAV).},
+  author={Chr{\'e}tien, L-P and Th{\'e}au, J and M{\'e}nard, P},
+  journal={International Archives of the Photogrammetry, Remote Sensing \& Spatial Information Sciences},
+  volume={40},
+  year={2015}
+}
+
+@article{lhoest2015many,
+  title={How many hippos (HOMHIP): algorithm for automatic counts of animals with infra-red thermal imagery from UAV},
+  author={Lhoest, Simon and Linchant, Julie and Quevauvillers, Samuel and Vermeulen, C{\'e}dric and Lejeune, Philippe},
+  journal={International Archives of the Photogrammetry, Remote Sensing and Spatial Information Sciences},
+  volume={40},
+  year={2015},
+  publisher={Copernicus}
+}
+
+@article{yue2018comparison,
+  title={A comparison of crop parameters estimation using images from UAV-mounted snapshot hyperspectral sensor and high-definition digital camera},
+  author={Yue, Jibo and Feng, Haikuan and Jin, Xiuliang and Yuan, Huanhuan and Li, Zhenhai and Zhou, Chengquan and Yang, Guijun and Tian, Qingjiu},
+  journal={Remote Sensing},
+  volume={10},
+  number={7},
+  pages={1138},
+  year={2018},
+  publisher={Multidisciplinary Digital Publishing Institute}
+}
+
+@inproceedings{paredes2017multispectral,
+  title={Multispectral imaging system with UAV integration capabilities for crop analysis},
+  author={Paredes, Juan Augusto and Gonz{\'a}lez, Jessenia and Saito, Carlos and Flores, Andr{\'e}s},
+  booktitle={2017 First IEEE International Symposium of Geoscience and Remote Sensing (GRSS-CHILE)},
+  pages={1--4},
+  year={2017},
+  organization={IEEE}
+}
+
+@article{zhang2017uav,
+  title={UAV low altitude photogrammetry for power line inspection},
+  author={Zhang, Yong and Yuan, Xiuxiao and Fang, Yi and Chen, Shiyu},
+  journal={ISPRS International Journal of GEO-information},
+  volume={6},
+  number={1},
+  pages={14},
+  year={2017},
+  publisher={Multidisciplinary Digital Publishing Institute}
+}
+
+@article{nex2014uav,
+  title={UAV for 3D mapping applications: a review},
+  author={Nex, Francesco and Remondino, Fabio},
+  journal={Applied geomatics},
+  volume={6},
+  number={1},
+  pages={1--15},
+  year={2014},
+  publisher={Springer}
+}
+
+@article{lin2019evaluation,
+  title={Evaluation of UAV LiDAR for mapping coastal environments},
+  author={Lin, Yi-Chun and Cheng, Yi-Ting and Zhou, Tian and Ravi, Radhika and Hasheminasab, Seyyed Meghdad and Flatt, John Evan and Troy, Cary and Habib, Ayman},
+  journal={Remote Sensing},
+  volume={11},
+  number={24},
+  pages={2893},
+  year={2019},
+  publisher={Multidisciplinary Digital Publishing Institute}
+}
+
+@article{erdos2013experimental,
+  title={An experimental UAV system for search and rescue challenge},
+  author={Erdos, David and Erdos, Abraham and Watkins, Steve E},
+  journal={IEEE Aerospace and Electronic Systems Magazine},
+  volume={28},
+  number={5},
+  pages={32--37},
+  year={2013},
+  publisher={IEEE}
+}
+
+@article{goodrich2008supporting,
+  title={Supporting wilderness search and rescue using a camera-equipped mini UAV},
+  author={Goodrich, Michael A and Morse, Bryan S and Gerhardt, Damon and Cooper, Joseph L and Quigley, Morgan and Adams, Julie A and Humphrey, Curtis},
+  journal={Journal of Field Robotics},
+  volume={25},
+  number={1-2},
+  pages={89--110},
+  year={2008},
+  publisher={Wiley Online Library}
+}
+
+@incollection{zhou2018unet++,
+  title={Unet++: A nested u-net architecture for medical image segmentation},
+  author={Zhou, Zongwei and Rahman Siddiquee, Md Mahfuzur and Tajbakhsh, Nima and Liang, Jianming},
+  booktitle={Deep learning in medical image analysis and multimodal learning for clinical decision support},
+  pages={3--11},
+  year={2018},
+  publisher={Springer}
+}
+
+@article{yaqoob2019autonomous,
+  title={Autonomous driving cars in smart cities: Recent advances, requirements, and challenges},
+  author={Yaqoob, Ibrar and Khan, Latif U and Kazmi, SM Ahsan and Imran, Muhammad and Guizani, Nadra and Hong, Choong Seon},
+  journal={IEEE Network},
+  volume={34},
+  number={1},
+  pages={174--181},
+  year={2019},
+  publisher={IEEE}
+}
+
+@inproceedings{gomez2016neural,
+  title={A neural-network-based fault classifier},
+  author={G{\'o}mez, Laura Rodr{\'\i}guez and Wunderlich, Hans-Joachim},
+  booktitle={2016 IEEE 25th Asian Test Symposium (ATS)},
+  pages={144--149},
+  year={2016},
+  organization={IEEE}
+}
+
+@article{goyal2018deepzip,
+  title={Deepzip: Lossless data compression using recurrent neural networks},
+  author={Goyal, Mohit and Tatwawadi, Kedar and Chandak, Shubham and Ochoa, Idoia},
+  journal={arXiv preprint arXiv:1811.08162},
+  year={2018}
+}
+
+@inproceedings{wu2015typical,
+  title={Typical target detection in satellite images based on convolutional neural networks},
+  author={Wu, Hui and Zhang, Hui and Zhang, Jinfang and Xu, Fanjiang},
+  booktitle={2015 IEEE International Conference on Systems, Man, and Cybernetics},
+  pages={2956--2961},
+  year={2015},
+  organization={IEEE}
+}
+
+@article{sharma2017activation,
+  title={Activation functions in neural networks},
+  author={Sharma, Sagar and Sharma, Simone and Athaiya, Anidhya},
+  journal={towards data science},
+  volume={6},
+  number={12},
+  pages={310--316},
+  year={2017}
+}
+
+@inproceedings{quigley2009ros,
+  title={ROS: an open-source Robot Operating System},
+  author={Quigley, Morgan and Conley, Ken and Gerkey, Brian and Faust, Josh and Foote, Tully and Leibs, Jeremy and Wheeler, Rob and Ng, Andrew Y and others},
+  booktitle={ICRA workshop on open source software},
+  volume={3},
+  number={3.2},
+  pages={5},
+  year={2009},
+  organization={Kobe, Japan}
+}
