Final version, but still need to check

--- a/main.tex
+++ b/main.tex
@@ -803,12 +803,12 @@ The \acs{MAV} flew autonomously up to 160\,m in a challenging forest environment
 %% |                         Appendices                         |
 %% --------------------------------------------------------------
 
-\appendix
-\renewcommand\chaptername{Appendix}
+%\appendix
+%\renewcommand\chaptername{Appendix}
 
-\renewcommand{\thechapter}{A}
-\renewcommand\chaptername{Appendix A}
+%\renewcommand{\thechapter}{A}
+%\renewcommand\chaptername{Appendix A}
 
-\chapter{Appendix A}
+%\chapter{Appendix A}
 
 \end{document}
