--- a/src/statement.tex
+++ b/src/statement.tex
@@ -5,12 +5,14 @@
 \section*{Author statement for undergraduate thesis}
 \vskip 0.5em
 I declare that the presented work was developed independently and that I have listed all sources of information used within it in accordance with the methodical instructions for observing the ethical principles in the preparation of university theses.
+\vspace{0.5cm}
 
 Prague, date ................. \hspace{5cm}......................
 
 \section*{Prohlášení autora práce}
 \vskip 0.5em
 Prohlašuji, že jsem předloženou práci vypracoval samostatně a že jsem uvedl veškeré použité informační zdroje v souladu s Metodickým pokynem o dodržování etických principů při přípravě vysokoškolských závěrečných prací.
+\vspace{0.5cm}
 
 V Praze dne ................. \hspace{5cm}......................
 
