Final after corrections, but need to compress the images

--- a/src/abbreviations.tex
+++ b/src/abbreviations.tex
@@ -19,4 +19,5 @@
   \acro{DNN}[DNN]{Deep Neural Network}
   \acro{SAR}[SAR]{Search and Rescue}
   \acro{GPU}[GPU]{Graphics Processing Unit}
+  \acro{API}[API]{Application Programming Interface}
 \end{acronym}
