--- a/src/abstract_en.tex
+++ b/src/abstract_en.tex
@@ -7,7 +7,7 @@
 \section*{Abstract}
 \vskip 0.5em
 
-The problem of trail following using image from monocular camera, attached to an unmanned drone or ground vehicle is tackled in this thesis. A system solving the task of flying through the forest along a man-made dirt trail is presented. It is accomplished by using a classification deep convolutional neural network for determining in which direction is the camera pointed, relative to the trail. It was implemented to run in real-time onboard an MRS multi-rotor drone. Part of the implementation is also an algorithm for path planner trajectory generation. Performance and robustness was tested in simulations, followed by real-world experiments. The implemented system showed good practical results and can be used as a starting point for more complex navigation and surveillance applications.
+The problem of autonomously following a trail by a robot based on images from an onboard monocular camera is tackled in this thesis. A robotic system that solves the task of flying through a forest along a man-made dirt trail is presented. It is accomplished by using a classification deep convolutional neural network for determining in which direction relative to the trail is the camera pointing. The output of this classifier is then used to command the robot to follow the trail. It was implemented to run online onboard an MRS multi-rotor micro aerial vehicle. Part of the implementation is also an algorithm for path planner trajectory generation. Performance and robustness was tested in simulations, followed by real-world experiments. The implemented system showed good practical results and can be used as a starting point for more complex navigation and surveillance applications.
 
 \vskip 1em
 
